fix bug on small screen size so messagebox fits screen properly

--- a/client/src/components/messenger/MessageBox.module.css
+++ b/client/src/components/messenger/MessageBox.module.css
@@ -1,6 +1,6 @@
 .messenger {
   background-color: #fff;
-  height: calc(100vh - 88px);
+  height: calc(100dvh - 88px);
   flex-grow: 1;
   max-width: calc(100vw - 360px - 32px);
   margin: 16px -16px 16px 16px;
@@ -101,7 +101,7 @@
 
 @media (max-width: 1040px) {
   .messenger {
-    height: calc(100vh - 56px);
+    height: calc(100dvh - 56px);
     flex-grow: 0;
     max-width: 100%;
     margin: 0;
